--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -9,6 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #6c7275;
 }
 
 code {
@@ -20,4 +21,14 @@ a {
   text-decoration: none;
   color: inherit;
   display: inline-block;
+}
+
+input {
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
+button {
+  display: block;
 }
