--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -24,7 +26,7 @@ a {
 }
 
 input {
-  border: none;
+  /* border: none; */
   outline: none;
   background-color: transparent;
 }
