Bag Custom Page: Create UI Bag custom page

--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -5,3 +5,13 @@
     @apply font-inter;
   }
 }
+
+/* custom.css */
+.ant-tooltip-inner {
+  background-color: #CFF53E !important; /* Đổi màu nền của tooltip */
+  color: black !important; /* Đổi màu chữ */
+}
+
+.ant-tooltip-arrow-content {
+  background-color: #CFF53E !important; /* Đổi màu nền của mũi tên tooltip */
+}
