--- a/fe/src/components/Header/Header.css
+++ b/fe/src/components/Header/Header.css
@@ -1,29 +1,51 @@
 .sale-off {
-    width: 1923px;
-    height: 40px;
-    position: absolute;
-    top: 1px;
-    left: -1px;
-    padding: 8px 16px 8px 766px;
-    gap: 0px;
-    opacity: 0;
-  }
-  .promo-banner {
-    width: 100%;
-    height: 40px;
-    background-color: #FFC0CB;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 8px 16px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 1; 
-  }
-  
-  .promo-text {
-    color: #1C1C1C; /* Dark gray text */
-    font-size: 14px;
-  }
-  
+  width: 1923px;
+  height: 40px;
+  position: absolute;
+  top: 1px;
+  left: -1px;
+  padding: 8px 16px 8px 766px;
+  gap: 0px;
+  opacity: 0;
+}
+.promo-banner {
+  width: 100%;
+  height: 40px;
+  background-color: #ffc0cb;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 16px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 1;
+}
+
+.promo-text {
+  color: #1c1c1c; /* Dark gray text */
+  font-size: 14px;
+}
+
+.side-nav {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 250px;
+  height: 100%;
+  background: white;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+  transition: right 0.3s ease;
+  z-index: 1000;
+}
+.side-nav.visible {
+  right: 0;
+}
+.side-nav ul {
+  list-style: none;
+  padding: 20px;
+  margin: 0;
+}
+.side-nav ul li {
+  margin-bottom: 10px;
+}
